    deprecated and will be removed in version 3.0.

    Note that this means that the result backend requires RabbitMQ 1.1.0 or
    higher, and that you have to disable expiration if you are running
    with an older version.  You can do so by disabling the
    :setting:`CELERY_TASK_RESULT_EXPIRES` setting::

        CELERY_TASK_RESULT_EXPIRES = None

* Broker transports can be now be specified using URLs

    The broker can now be specified as an URL instead.
    This URL must have the format::

        transport://user:password@hostname:port/virtual_host

    for example the default broker is written as::

        amqp://guest:guest@localhost:5672//

    The scheme is required, so that the host is identified
    as an URL and not just a host name.
    User, password, port and virtual_host are optional and
    defaults to the particular transports default value.

    .. note::

        Note that the path component (virtual_host) always starts with a
        forward-slash.  This is necessary to distinguish between the virtual
        host ``''`` (empty) and ``'/'``, which are both acceptable virtual
        host names.

        A virtual host of ``'/'`` becomes:

            amqp://guest:guest@localhost:5672//

        and a virtual host of ``''`` (empty) becomes::

            amqp://guest:guest@localhost:5672/

        So the leading slash in the path component is **always required**.

    In addition the :setting:`BROKER_URL` setting has been added as an alias
    to ``BROKER_HOST``.  Any broker setting specified in both the URL and in
    the configuration will be ignored, if a setting is not provided in the URL
    then the value from the configuration will be used as default.

    Also, programs now support the :option:`-b|--broker` option to specify
    a broker URL on the command line::

        $ celeryd -b redis://localhost

        $ celeryctl -b amqp://guest:guest@localhost//e

    The environment variable :envvar:`CELERY_BROKER_URL` can also be used to